2014-04-25  William A. Perkins  <william.perkins@pnnl.gov>

	* block_hydro_bc.f90 (block_compute_bc_flux): do not compute areas
	for 'IN' BCs
	(apply_hydro_bc): (re)implement IN SOURCE/SINK BC; this
	implementation requires that the area be solely owned by a single
	process; an attempt to warn the user is made if that condition is
	not met.  

	* hydro_bc.f90 (read_bcspecs): fix the way FLUX conditions
	allocate space for area (bank conditions only, still not adequate
	for internal)

	* scalar_bc.f90 (set_scalar_area): add
	(read_scalar_bcspecs): recognize SOURCE BC specifications

	* scalar_solve.f90 (apply_scalar_bc, apply_scalar_source):
	(re)implement SOURCE scalar BC's

	* scalars_module.f90 (allocate_scalarblock_components): declare
	and allocate an array for SOURCE concentrations  

2014-04-03  William A. Perkins  <william.perkins@pnnl.gov>

	* hotstart.f90 (write_restart): a GA sync was necessary to avoid a
	race 

	* block_initialization.f90 (block_initialization): all entries in
	a character parameter array must be the same size?

	* mass2_parallel.f90 (banner): make work with PETSc 3.4.4

	* solver_petsc.F90: changes needed to make work with PETSc 3.4.4;
	not sure if earlier PETSc versions work anymore

2014-03-26  William A. Perkins  <william.perkins@pnnl.gov>

	* test/flow/spur-dike-1: make plots work

	* test/temperature/pond: make plots work

	* test/transport/skew30: update configuration so it runs

2013-02-12  William A. Perkins  <william.perkins@pnnl.gov>

	* test/flow/Rodi/Makefile (NPROC): parallelize test

	* test/flow/180bend/Makefile (MESH): use the finer mesh

2012-11-21  William A. Perkins  <william.perkins@pnnl.gov>

	* test/flow/180bend: parallelize the test and add some pictures

	* test/benchmark/jda/jda-cgns.lay: update 

	* test/benchmark/jda/Makefile (MPIRUN): make parallel

2012-08-08  William A. Perkins  <william.perkins@pnnl.gov>

	* scripts/dewaterred.py (Block.writefld): convert the array to
	floating point before writing it
