@@ -8,7 +8,7 @@
 # -------------------------------------------------------------
 # -------------------------------------------------------------
 # Created March 25, 2003 by William A. Perkins
-# Last Change: Wed Oct  5 09:26:38 2011 by William A. Perkins <d3g096@PE10900.pnl.gov>
+# Last Change: 2014-04-25 10:51:24 d3g096
 # -------------------------------------------------------------
 
 # -------------------------------------------------------------
@@ -17,6 +17,7 @@
 AC_INIT(MASS2, 0.5)
 AM_INIT_AUTOMAKE()
 AC_CANONICAL_HOST()
+AM_MAINTAINER_MODE()
 
 # -------------------------------------------------------------
 # Checks for Programs we need
